# mailin

./: .woodpecker.yml  Dockerfile  README.md
mailin/: Cargo.toml
mailin-embedded/: Cargo.toml
mailin-embedded/src/: rtls.rs  running.rs
mailin-server/: Cargo.toml
mailin-server/k8s-deploy/: certificate.yaml  mailin-deploy.yaml
mailin-server/src/: main.rs
mailin/src/: fsm.rs  parser.rs  smtp.rs
mime-event/: Cargo.toml
mxdns/: Cargo.toml
mxdns/src/: blocklist.rs  err.rs  lib.rs  resolve.rs
